--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "url": "https://github.com/walli545/ioBroker.time-switch"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3"
+    "@iobroker/adapter-core": "^1.0.3",
+    "@types/node-schedule": "^1.2.4",
+    "@types/suncalc": "^1.8.0",
+    "node-schedule": "^1.3.2",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "@iobroker/testing": "^1.2.5",
