--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sinon-chai": "^3.3.0",
     "source-map-support": "^0.5.13",
     "ts-node": "^8.3.0",
+    "typemoq": "^2.1.0",
     "typescript": "^3.6.3"
   },
   "main": "build/main.js",
