--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ before_script:
 script:
   - npm run test:package
   - npm run test:unit
+  - npm run test:ts
   - export DEBUG=testing:*
   - npm run test:integration
