--- a/package.json
+++ b/package.json
@@ -19,42 +19,42 @@
     "url": "https://github.com/walli545/ioBroker.time-switch"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3",
-    "@types/node-schedule": "^1.2.4",
+    "@iobroker/adapter-core": "^2.2.1",
+    "@types/node-schedule": "^1.3.0",
     "@types/suncalc": "^1.8.0",
     "node-schedule": "^1.3.2",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "@iobroker/testing": "^1.2.5",
-    "@types/chai": "^4.2.2",
+    "@iobroker/testing": "^2.1.0",
+    "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/gulp": "^4.0.6",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^10.14.18",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.1",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.0.13",
+    "@types/sinon": "^7.5.2",
     "@types/sinon-chai": "^3.2.3",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
-    "axios": "^0.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^6.4.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "gulp": "^4.0.2",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
+    "mocha": "^7.1.0",
+    "nyc": "^15.0.0",
+    "prettier": "^1.19.1",
     "proxyquire": "^2.1.3",
-    "rimraf": "^3.0.0",
-    "sinon": "^7.4.2",
-    "sinon-chai": "^3.3.0",
-    "source-map-support": "^0.5.13",
-    "ts-node": "^8.3.0",
+    "rimraf": "^3.0.2",
+    "sinon": "^9.0.1",
+    "sinon-chai": "^3.5.0",
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2",
     "typemoq": "^2.1.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.8.3"
   },
   "main": "build/main.js",
   "scripts": {
@@ -69,7 +69,8 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "coverage": "nyc npm run test:ts",
-    "lint": "eslint --ext .ts src"
+    "lint": "eslint --ext .ts src",
+    "depoly-docker": "@powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./test.ps1"
   },
   "nyc": {
     "include": [
