--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ os:
 
 language: node_js
 node_js:
-  - '8'
+  - 'node'
   - '10'
   - '12'
 
@@ -27,7 +27,7 @@ before_script:
   - npm -v
 script:
   - npm run test:package
-  - npm run test:unit
   - npm run test:ts
+  - npm run test:unit
   - export DEBUG=testing:*
   - npm run test:integration
