Add dev upload scripts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ coverage
 # i18n intermediate files
 admin/i18n/flat.txt
 admin/i18n/*/flat.txt
+
+# Upload scripts to dev env
+go_dev.sh
+go_dev_docker.sh
