Enable lint step in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm; fi'
   - npm -v
 script:
+  - npm run lint
   - npm run test:package
   - npm run test:ts
   - npm run test:unit
