--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ before_script:
 script:
   - npm run lint
   - npm run test:package
-  - npm run test:ts
+  - nyc --reporter=lcov npm run test:ts
   - npm run test:unit
   - export DEBUG=testing:*
   - npm run test:integration
+
+after_success: codecov
