--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@iobroker/adapter-core": "^2.2.1",
     "@types/node-schedule": "^1.3.0",
     "@types/suncalc": "^1.8.0",
+    "codecov": "^3.6.5",
     "node-schedule": "^1.3.2",
     "suncalc": "^1.8.0"
   },
