--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.2",
     "gulp": "^4.0.2",
-    "mocha": "^7.2.0",
+    "mocha": "^8.2.1",
     "nyc": "^15.0.0",
     "prettier": "^2.2.0",
     "proxyquire": "^2.1.3",
@@ -64,7 +64,7 @@
     "build": "npm run build:ts",
     "watch:ts": "tsc -p tsconfig.build.json --watch",
     "watch": "npm run watch:ts",
-    "test:ts": "mocha --opts test/mocha.custom.opts",
+    "test:ts": "mocha --config test/ts/.mocharc.json",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
