--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ os:
   - linux
   - osx
   - windows
-
 language: node_js
 node_js:
-  - 'node'
-  - '10'
   - '12'
-
+  - '14'
+  - '16'
 env:
   - CXX=g++-4.8
 addons:
@@ -16,21 +14,19 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-4.9
-
+      - g++-6
 before_install:
-  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-4.9; fi'
-  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CC=g++-4.9; fi'
+  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-6; fi'
+  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CC=g++-6; fi'
 before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm; fi'
   - npm -v
 script:
   - npm run lint
-  - npm run test:package
-  - nyc --reporter=lcov npm run test:ts
-  - npm run test:unit
-  - export DEBUG=testing:*
-  - npm run test:integration
-
+  - 'npm run test:package'
+  - 'nyc --reporter=lcov npm run test:ts'
+  - 'npm run test:unit'
+  - 'export DEBUG=testing:*'
+  - 'npm run test:integration'
 after_success: codecov
